# second-opinion

./: README.md  claude-command.md  pyproject.toml
second_opinion/: __init__.py  cli.py  reviewer.py
